	           (Patch by Michael Ulbrich)
	- 0000761: Setting metadata on an image should always succeed.
	           (Patch by Matthias Baas)
	- 0000760: Exiv2 fails to write to JPEG with an empty APP13 Photoshop PS3
	           segment. (Reported by Stefan Brandl)
	- 0000757: Wrong ELSE statement in src/CMakeLists.txt.
	           (Reported by Michael Hansen)
	- 0000689: Support for Encapsulated PostScript (*.eps) files.
	           (Michael Ulbrich, Volker Grabsch)
	- 0000439: The exiv2 library should be re-entrant.
	           (Patch by Jonathan Potter, GP Software)
	         - Fixed typo: SupplementalCategory -> SupplementalCategories.
	           (Jürgen Wolz)
	         - Added Tokina AT-X 107 AF DX Fish-eye 10-17mm f/3.5-4.5 lens.
	           (Milan Knizek)
	         - Added Exif.Panasonic.LensType to the Exiv2::lensName()
	           easy-access function. (Adrian Woodley)
	         - Added Exif.OlympusEq.LensModel to the Exiv2::lensName()
	           easy-access function. (Niels Kristian Bech Jensen)
	         - Added new function Exiv2::versionNumberHexString().
	           (Volker Grabsch)
	         - Updated Nikon Lens lookup table to v4.3.423.01 of
	           Robert Rottmerhusen's fmountlens list.
	         - Break-up ValueType constructor into two as a workaround for
	           a MSVC 7.1 bug.
	         - Simplified LogMsg to make it more portable and more efficient.
	           (The original version doesn't build with MSVC 7.1.)

	* MSVC related
	         - Added build environment for MSVC 64 bit builds.
	           (Robin Mills)


Changes from version 0.21 to 0.21.1
-----------------------------------

* Exiv2 library
	- 0000759: Cannot extract exif data from Pentax K-x DNG file.
	           (Reported by Kenneth Bogert)
	- 0000752: Crash when writing Exif.Image.Software.
	           (Reported by Jim Nelson)
	- 0000750: Assertion in XmpParser::encode should be an exception.
	- 0000749: Regression: Compilation error with EXV_HAVE_XMP_TOOLKIT undefined.